Force codec to avoid transcoding working.

--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
@@ -37,3 +37,7 @@ mat-radio-button:first-child {
     padding-top: 6px;
     padding-bottom: 15px;
 }
+
+#allow-transcoding-div {
+    margin-bottom: 10px;   
+}
