--- a/openvidu-testapp/src/app/components/video/video.component.html
+++ b/openvidu-testapp/src/app/components/video/video.component.html
@@ -5,6 +5,9 @@
             <button class="video-btn events-btn bottom-left-rounded" title="Publisher events" (click)="openPublisherEventsDialog()">
                 <mat-icon aria-label="Publisher events" class="mat-icon material-icons" role="img" aria-hidden="true">notifications</mat-icon>
             </button>
+            <button class="video-btn events-btn bottom-left-rounded" title="Peer Connection Stats" (click)="showStats()">
+                <mat-icon aria-label="Peer Connection Stats" class="mat-icon material-icons" role="img" aria-hidden="true">info</mat-icon>
+            </button>
         </div>
         <div class="bottom-div">
             <button class="video-btn pub-btn" title="Publish/Unpublish" (click)="pubUnpub()">
