--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
@@ -17,10 +17,10 @@
       <input matInput id="stream-id-field" placeholder="streamId" [(ngModel)]="streamId">
     </mat-form-field>
     <div style="margin-left:9px">
-      <mat-checkbox class="checkbox-form" [(ngModel)]="connectionOptions.record" id="record-checkbox">Record
+      <mat-checkbox class="checkbox-form" [(ngModel)]="connectionProperties.record" id="record-checkbox">Record
       </mat-checkbox>
       <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
-        <mat-select [(ngModel)]="connectionOptions.role" id="token-role-select">
+        <mat-select [(ngModel)]="connectionProperties.role" id="token-role-select">
           <mat-option *ngFor="let enumerator of enumToArray(openviduRoles)" [value]="enumerator">
             <span [attr.id]="'option-' + enumerator">{{ enumerator }}</span>
           </mat-option>
