--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
@@ -68,7 +68,7 @@
       <mat-dialog-content>
         <label class="label">Role</label>
         <div id="role-div">
-          <mat-radio-group name="Role" [(ngModel)]="connectionOptions.role">
+          <mat-radio-group name="Role" [(ngModel)]="connectionProperties.role">
             <mat-radio-button id="radio-btn-sub" value="SUBSCRIBER">SUB</mat-radio-button>
             <mat-radio-button id="radio-btn-pub" value="PUBLISHER">PUB</mat-radio-button>
             <mat-radio-button id="radio-btn-mod" value="MODERATOR">MOD</mat-radio-button>
@@ -79,19 +79,19 @@
         <div id="kurento-config-div">
           <mat-form-field style="width: 39%; margin-right: 5px">
             <input matInput placeholder="Max recv" type="number"
-              [(ngModel)]="connectionOptions.kurentoOptions.videoMaxRecvBandwidth">
+              [(ngModel)]="connectionProperties.kurentoOptions.videoMaxRecvBandwidth">
           </mat-form-field>
           <mat-form-field style="width: 39%">
             <input matInput placeholder="Min recv" type="number"
-              [(ngModel)]="connectionOptions.kurentoOptions.videoMinRecvBandwidth">
+              [(ngModel)]="connectionProperties.kurentoOptions.videoMinRecvBandwidth">
           </mat-form-field>
           <mat-form-field style="width: 39%; margin-right: 5px">
             <input matInput placeholder="Max send" type="number"
-              [(ngModel)]="connectionOptions.kurentoOptions.videoMaxSendBandwidth">
+              [(ngModel)]="connectionProperties.kurentoOptions.videoMaxSendBandwidth">
           </mat-form-field>
           <mat-form-field style="width: 39%">
             <input matInput placeholder="Min send" type="number"
-              [(ngModel)]="connectionOptions.kurentoOptions.videoMinSendBandwidth">
+              [(ngModel)]="connectionProperties.kurentoOptions.videoMinSendBandwidth">
           </mat-form-field>
           <mat-chip-list *ngIf="filters.length > 0">
             <mat-chip style="height: 20px" *ngFor="let filterName of filters"
@@ -108,7 +108,7 @@
         </div>
 
         <div id="record-div">
-          <mat-checkbox class="checkbox-form" [(ngModel)]="connectionOptions.record" id="record-checkbox">Record
+          <mat-checkbox class="checkbox-form" [(ngModel)]="connectionProperties.record" id="record-checkbox">Record
           </mat-checkbox>
         </div>
 
@@ -132,6 +132,6 @@
   <mat-dialog-actions>
     <button id="cancel-btn" mat-button [mat-dialog-close]="undefined">CANCEL</button>
     <button id="save-btn" mat-button
-      [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, customToken: customToken, forcePublishing: forcePublishing, connectionOptions: generateConnectionOptions()}">SAVE</button>
+      [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, customToken: customToken, forcePublishing: forcePublishing, connectionProperties: generateConnectionProperties()}">SAVE</button>
   </mat-dialog-actions>
 </div>
