--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
@@ -52,6 +52,10 @@
     <div *ngIf="showRecProperties" id="rec-properties-div">
       <div>
         <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
+          <input matInput id="recording-media-node-field" placeholder="Media Node"
+            [(ngModel)]="recordingProperties.mediaNode.id">
+        </mat-form-field>
+        <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
           <input matInput id="recording-name-field" placeholder="Recording name" [(ngModel)]="recordingProperties.name">
         </mat-form-field>
         <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
@@ -63,7 +67,7 @@
         </mat-form-field>
       </div>
       <div
-        *ngIf="recordingProperties.outputMode.toString() === recMode[recMode.COMPOSED] && recordingProperties.hasVideo"
+        *ngIf="recordingProperties.hasVideo && (recordingProperties.outputMode === 'COMPOSED' || recordingProperties.outputMode === 'COMPOSED_QUICK_START')"
         id="rec-layout-div">
         <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
           <mat-select placeholder="Recording layout" [(ngModel)]="recordingProperties.recordingLayout">
@@ -72,8 +76,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field
-          *ngIf="recordingProperties.hasVideo && recordingProperties.recordingLayout.toString() === recLayouts[recLayouts.CUSTOM]"
+        <mat-form-field *ngIf="recordingProperties.hasVideo && recordingProperties.recordingLayout === 'CUSTOM'"
           class="inner-text-input" [style.fontSize.px]=14>
           <input matInput placeholder="Custom layout" type="text" [(ngModel)]="recordingProperties.customLayout">
         </mat-form-field>
@@ -82,7 +85,7 @@
         <mat-checkbox id="rec-hasaudio-checkbox" [(ngModel)]="recordingProperties.hasAudio">Has audio</mat-checkbox>
         <mat-checkbox id="rec-hasvideo-checkbox" [(ngModel)]="recordingProperties.hasVideo">Has video</mat-checkbox>
         <mat-form-field
-          *ngIf="recordingProperties.hasVideo && recordingProperties.outputMode.toString() === recMode[recMode.COMPOSED]"
+          *ngIf="recordingProperties.hasVideo && (recordingProperties.outputMode === 'COMPOSED' || recordingProperties.outputMode === 'COMPOSED_QUICK_START')"
           id="recording-resolution-form" class="inner-text-input" [style.fontSize.px]=14>
           <input matInput id="recording-resolution-field" placeholder="Resolution" type="text"
             [(ngModel)]="recordingProperties.resolution">
